views complete app code
Change-Id: I60b8c1b96c0e0fe800bfc6e11f906bdbc0890e82

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,20 @@
      limitations under the License.
 -->
 <resources>
-    <string name="app_name">Water Tracker</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="app_name">Juice Tracker</string>
+    <string name="juice_type">Type of juice</string>
+    <string name="delete">Delete</string>
+    <string name="juice_name">Juice Name</string>
+    <string name="juice_description">Description</string>
+    <string name="juice_rating">Juice Rating</string>
+    <string name="name">Name</string>
+    <string name="done">Done</string>
+    <string name="juice_color">Juice color</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="red">Red</string>
+    <string name="blue">Blue</string>
+    <string name="green">Green</string>
+    <string name="cyan">Cyan</string>
+    <string name="yellow">Yellow</string>
+    <string name="magenta">Magenta</string>
 </resources>
